--- a/Pavan_Vasan.ipynb
+++ b/Pavan_Vasan.ipynb
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "20874f98",
    "metadata": {},
    "outputs": [
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "166c2402",
    "metadata": {},
    "outputs": [
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "f472e2dc",
    "metadata": {},
    "outputs": [],
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "62f60f55",
    "metadata": {},
    "outputs": [
@@ -1213,7 +1213,7 @@
        "(5627, 43)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "7e93bb1f",
    "metadata": {},
    "outputs": [],
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "d90465a8",
    "metadata": {},
    "outputs": [
@@ -1244,7 +1244,7 @@
        "(32950, 43)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "67d03a1e",
    "metadata": {},
    "outputs": [
@@ -1299,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "31afede7",
    "metadata": {},
    "outputs": [
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "64e961fa",
    "metadata": {},
    "outputs": [
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "d3e3f1eb",
    "metadata": {},
    "outputs": [
@@ -1414,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "id": "4355250b",
    "metadata": {},
    "outputs": [
@@ -1459,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "id": "81d4dcba",
    "metadata": {},
    "outputs": [
@@ -1504,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "id": "3559d794",
    "metadata": {},
    "outputs": [
@@ -1539,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "id": "d1dd540d",
    "metadata": {},
    "outputs": [
@@ -1586,7 +1586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "id": "6648b9b7",
    "metadata": {},
    "outputs": [
@@ -1625,7 +1625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "id": "e8b71597",
    "metadata": {},
    "outputs": [
@@ -1657,20 +1657,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1784f71a",
+   "id": "012d700c",
    "metadata": {},
    "source": [
     "- In order to prevent defaulting on the loans, it is best to set up a term of 36 months\n",
     "- Considering that defaulted loans had higher interest rates, it is best to reduce them, considering that there is not much difference with respect to the annual income for either defaulters or non_defaulters\n",
     "- We must pay special attention to those that have worked for at least 10 years or those who are in the starting of their careers\n",
     "- We must carefully consider those who are paying rent or having a mortgage.\n",
-    "- We must take into consideration those that have a higher credit utilization ratio (revol_util)"
+    "- We must be a little cautious around those that have a higher credit utilization ratio (revol_util)\n",
+    "- Be cautious when considering a loan with the grades B,C and D\n",
+    "- Borrowers who earn between 25000 and 75000 have the highest possibility of defaulting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e62a31ca",
+   "metadata": {},
+   "source": [
+    "# ROUGH WORK"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21c0b3e5",
+   "id": "6073bfbc",
    "metadata": {},
    "outputs": [],
    "source": []
