--- a/Pavan_Vasan.ipynb
+++ b/Pavan_Vasan.ipynb
@@ -445,7 +445,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "b3d6b705",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1508,7 +1510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06a763c6",
+   "id": "93cef40e",
    "metadata": {},
    "source": [
     "### This is interesting, considering that there is not much of a difference with respect to the amount loaned to the lendees as seen below, even if the loan amount for those that have defaulted are slightly higher"
@@ -1715,10 +1717,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad6545c2",
+   "id": "82243f99",
    "metadata": {},
    "source": [
-    "### Borrowers who have been employed for at least 10 years have a high change of having a mortgage"
+    "### Borrowers who have been employed for at least 10 years have a highly prone to having a mortgage"
    ]
   },
   {
@@ -1749,7 +1751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02998a39",
+   "id": "69c913ff",
    "metadata": {},
    "source": [
     "## FACTORS THAT WILL PLAY AN IMPORTANT ROLE IN DETERMINING THE STATUS OF A LOAN APPLICATION"
@@ -1757,7 +1759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c30ba6a",
+   "id": "0291ef37",
    "metadata": {},
    "source": [
     "- Interest Rate (int_rate)\n",
